# ai-trading-agent

./: .gitignore  AGENTS.md  CLAUDE.md  GAPS.md  Makefile  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci-diagnostic.yml  ci.yml  code-health.yml
apps/api/: .gitignore  Dockerfile  README.md  openapi.json  pyproject.toml
apps/api/scripts/: export_openapi.py
apps/api/src/portfolio_outlook_api/: __init__.py  action_draft.py  action_draft_submission.py  action_draft_sync.py  ai_explanation_provider.py  ai_explanation_sync.py  ai_ts_provider.py  alert_summary_compose.py  anthropic_explanation_provider.py  anthropic_ts_provider.py  asset_listings.py  asset_master.py  belasting_routes.py  claude_ai_budget.py  config.py  daily_briefing_sync.py  decision_package_export.py  decision_package_routes.py  decision_package_sync.py  digest_routes.py  dividenden_routes.py  earnings_calendar_leg.py  earnings_routes.py  earnings_sync.py  email_sender.py  ensemble_forecast.py  eodhd_client.py  error_routes.py  explanation_batch_routes.py  forecast_routes.py  forecast_sync.py  fx_conversion.py  health.py  ibkr_account_snapshot_persistence.py  ibkr_account_snapshot_preflight.py  ibkr_connection_read_model.py  ibkr_connection_routes.py  ibkr_contracts.py  ibkr_ibapi_account_snapshot_client.py  ibkr_ibapi_client_facade.py  (+81 more)
apps/api/tests/: ibkr_sync_fixtures.py  request_audit_fixtures.py  test_action_draft_cancel_submitted.py  test_action_draft_endpoints.py  test_action_draft_routes.py  test_action_draft_submission.py  test_action_draft_submission_endpoints.py  test_action_draft_sync.py  test_ai_explanation_endpoints.py  test_ai_explanation_provider.py  test_ai_explanation_sync.py  test_ai_ts_provider.py  test_alert_summary_compose.py  test_anthropic_explanation_provider.py  test_anthropic_ts_provider.py  test_asset_listing_endpoints.py  test_asset_master_source_link_endpoints.py  test_belasting_routes.py  test_claude_ai_budget.py  test_config_storage_settings.py  test_daily_briefing_endpoints.py  test_daily_briefing_sync.py  test_decision_package_endpoints.py  test_decision_package_export.py  test_decision_package_routes.py  test_decision_package_sync.py  test_digest_routes.py  test_dividenden_routes.py  test_earnings_calendar_leg.py  test_earnings_routes.py  test_earnings_sync.py  test_email_sender.py  test_ensemble_forecast.py  test_eodhd_client.py  test_eodhd_client_bars.py  test_error_routes.py  test_explanation_batch_routes.py  test_forecast_day_summary_route.py  test_forecast_endpoints.py  test_forecast_routes.py  (+96 more)
apps/web/: .gitignore  Dockerfile  README.md  eslint.config.mjs  next-env.d.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  postcss.config.mjs  vitest.config.ts
apps/worker/: Dockerfile  README.md  pyproject.toml
apps/worker/src/portfolio_outlook_worker/: __init__.py  api_trigger.py  config.py  daily_digest.py  digest_runner.py  email_sender.py  error_capture.py  health.py  ibkr_gateway.py  main.py  market_data_step.py  market_hours.py  morning_alerts.py  morning_alerts_runner.py  orchestrator.py  runtime_config_overlay.py  scheduler.py  single_flight_lock.py  starter_watchlist.py  storage_readiness.py
apps/worker/src/portfolio_outlook_worker/action_draft/: __init__.py  composer.py  supersede_check.py
apps/worker/src/portfolio_outlook_worker/decision_package/: __init__.py  composer.py  dutch_explanation_template.py  orchestration.py
apps/worker/src/portfolio_outlook_worker/forecasting/: __init__.py  asset_universe_resolver.py  calibration_step.py  forecasting_step.py  historical_bootstrap.py  label_translator.py  orchestrator_candidate_provider.py  orchestrator_scoring_cli.py  orchestrator_scoring_runner.py
apps/worker/src/portfolio_outlook_worker/ibkr_reconciliation/: __init__.py  ibkr_reconciliation_adapter.py  pass_a_orphaned_executions.py  pass_b_stale_in_flight.py  pass_c_timeout_recovery.py  reconciler.py  reconciler_runner.py
apps/worker/src/portfolio_outlook_worker/ibkr_submission/: __init__.py  cancel_sweep.py  drawdown_provider.py  ibkr_order_adapter.py  ibkr_order_sweeps.py  ibkr_submission_providers.py  lifecycle_handler.py  order_builder.py  safety_recheck.py  submission_sweep.py  submitter.py
apps/worker/src/portfolio_outlook_worker/providers/: __init__.py  eodhd.py
apps/worker/tests/: test_action_draft_composer_buy.py  test_action_draft_composer_decimal.py  test_action_draft_composer_sell.py  test_api_trigger.py  test_asset_universe_resolver.py  test_calibration_step.py  test_cancel_sweep.py  test_config_storage_settings.py  test_daily_digest.py  test_decision_package_composer.py  test_digest_integration.py  test_digest_runner.py  test_drawdown_provider.py  test_email_sender.py  test_eodhd_client.py  test_error_capture.py  test_forecasting_step.py  test_forecasting_step_multi_asset.py  test_forecasting_step_performance.py  test_historical_bootstrap.py  test_ibkr_gateway.py  test_ibkr_gateway_decimal.py  test_ibkr_order_adapter.py  test_ibkr_order_sweeps.py  test_ibkr_reconciliation_adapter.py  test_ibkr_submission_providers.py  test_label_translator.py  test_lifecycle_handler_fill.py  test_lifecycle_handler_partial_fill.py  test_lifecycle_handler_rejection.py  test_market_data_step.py  test_market_hours.py  test_morning_alerts.py  test_morning_alerts_runner.py  test_orchestrator.py  test_orchestrator_candidate_provider.py  test_orchestrator_digest.py  test_orchestrator_morning_alerts.py  test_orchestrator_scoring_cli.py  test_orchestrator_scoring_runner.py  (+23 more)
docs/: 00-PHASES.md  ai-policy.md  architecture.md  belgian-tax-compliance.md  deployment.md  go-live-runbook.md  live-tws-smoke-test-runbook.md  product-scope.md  risk-policy.md  roadmap.md  storage-architecture.md  ui-principles.md
docs/adr/: 0001-database-and-migrations.md  0002-ibkr-source-of-truth-and-broker-sync-schema.md  0003-ibkr-integration-approach.md
scripts/: check_product_tracking.py  project_status.py  smoke_test.py
(+436 files in other folders)
