[project]
name = "portfolio-outlook-api"
version = "0.1.0"
description = "FastAPI skeleton for Portfolio Outlook Manager"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "ai-trading-agent-storage>=0.1.0",
  "portfolio-outlook-domain>=0.1.0",
  "pydantic-settings>=2.6.0",
  "python-multipart>=0.0.20",
  "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0",
  "mypy>=1.11.0",
  "pytest>=8.3.0",
  "ruff>=0.6.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src"]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"src/portfolio_outlook_api/research_sources.py" = ["E501", "I001"]
"tests/test_research_source_archive_endpoints.py" = ["E501", "I001"]

[tool.ruff.lint.isort]
known-first-party = ["portfolio_outlook_api"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"

