[project]
name = "portfolio-outlook-worker"
version = "0.1.0"
description = "Worker skeleton for Portfolio Outlook Manager"
requires-python = ">=3.12"
dependencies = [
  "ai-trading-agent-storage>=0.1.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
  "sqlalchemy>=2.0.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11.0",
  "pytest>=8.3.0",
  "ruff>=0.6.0",
]

[tool.pytest.ini_options]
pythonpath = ["src", "../../packages/storage/src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src:../../packages/storage/src"
