[project]
name = "portfolio-outlook-worker"
version = "0.1.0"
description = "Worker skeleton for Portfolio Outlook Manager"
requires-python = ">=3.12"
dependencies = [
  "ai-trading-agent-storage>=0.1.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
  "sqlalchemy>=2.0.0",
  # Task 126: long-lived IBKR TWS API session via ib_insync. The
  # worker is the only owner of the TWS callback loop; the API
  # never talks to IBKR directly (it reads worker-persisted state
  # via the storage layer).
  "ib_insync>=0.9.86",
  # Task 126: Postgres driver for production runtime.
  "psycopg[binary]>=3.2",
  # Task 127: APScheduler skeleton for the locked 06:00 + hourly
  # 07:00-21:00 Europe/Brussels schedule.
  "apscheduler>=3.10.4",
  # Task 127: ``Europe/Brussels`` zoneinfo on slim Docker images.
  "tzdata>=2024.1",
  # Task 129: EODHD HTTP client. The provider module imports httpx
  # lazily (so the worker stays loadable in stub-only test runs),
  # but mypy --strict needs the package present.
  "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11.0",
  "pytest>=8.3.0",
  "ruff>=0.6.0",
]

[tool.pytest.ini_options]
pythonpath = ["src", "../../packages/storage/src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src:../../packages/storage/src"

[[tool.mypy.overrides]]
module = ["ib_insync", "ib_insync.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["apscheduler", "apscheduler.*"]
ignore_missing_imports = true
